--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Gestor de Tareas v3",
     "short_name": "TareasV3",
     "description": "Un gestor de tareas simple y eficiente.",
-    "start_url": "./Gestor de Tareas v3.html",
+    "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#0D1117",
     "theme_color": "#161B22",
